// Інтерфейс для планування постачання
public interface ISupplyPlan {
    void executePlan();
}
